Update to JDK 17