@@ -101,7 +101,6 @@ subprojects {
   }
   val toolChainVersion = project.findProperty("moshix.javaLanguageVersion")?.toString() ?: "11"
   val release = toolChainVersion.toInt()
-  val usePreview = project.hasProperty("moshix.javaPreview")
   pluginManager.withPlugin("java") {
     configure<JavaPluginExtension> {
       toolchain {
@@ -111,16 +110,6 @@ subprojects {
 
     project.tasks.withType<JavaCompile>().configureEach {
       options.release.set(release)
-      if (usePreview) {
-        options.compilerArgs.add("--enable-preview")
-      }
-    }
-    if (usePreview) {
-      project.tasks.withType<Test>().configureEach {
-        // TODO why doesn't add() work?
-        //  jvmArgs!!.add("--enable-preview")
-        jvmArgs = listOf("--enable-preview")
-      }
     }
   }
   pluginManager.withPlugin("org.jetbrains.kotlin.jvm") {
